# gpt-api

./: .env  .gitignore  README.md  app.py  pyproject.toml
entity/: access_token_entity.py  chat_entity.py  completion_entity.py  db_init.py  gpt_image_entity.py  user_chat_completion_entity.py  user_chat_entity.py  user_completion_entity.py  user_entity.py  user_gpt_image_entity.py  user_web_chat_entiy.py  web_chat_response_entity.py
models/: chat.py  completions.py  gpt_chat.py  image.py  web_chat.py
service/: access_token_service.py  chat_service.py  completion_service.py  gpt_image_service.py  user_chat_completion_service.py  user_chat_service.py  user_completion_service.py  user_gpt_image_service.py  user_web_chat_service.py  web_chat_service.py
sql/: public.sql
utils/: b64image.py  db_utils.py  fileutils.py  id_utils.py  json_utils.py  limit_utils.py  log_utils.py  session_utils.py  time_utils.py  token_utils.py
