[tool.poetry]
name = "gpt-api"
version = "0.1.0"
description = ""
authors = ["Akagi-Kazeno <akagikazeno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = { extras = ["async"], version = "^2.3.2" }
openai = "^0.27.8"
requests = "^2.31.0"
opencv-python = "^4.8.0.74"
pillow = "^10.0.0"
sqlalchemy = "^2.0.18"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
numpy = "^1.25.0"
psycopg2-binary = "^2.9.6"
ratelimit = "^2.2.1"
setuptools = "^68.0.0"
aiohttp = "^3.8.4"
revChatGPT = "^6.7.6"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
