[tool.poetry]
name = "gpt-api"
version = "0.1.0"
description = ""
authors = ["Akagi-Kazeno <akagikazeno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = { extras = ["async"], version = "^2.3.3" }
openai = "^0.28.1"
requests = "^2.31.0"
opencv-python = "^4.8.1.78"
pillow = "^10.0.1"
sqlalchemy = "^2.0.21"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
numpy = "^1.26.0"
psycopg2-binary = "^2.9.8"
ratelimit = "^2.2.1"
setuptools = "^68.2.2"
aiohttp = "^3.8.5"
revChatGPT = "^6.8.6"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
